[day3] implement bootpack.c

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tolsrc"]
 	path = tolsrc
 	url = git@github.com:HariboteOS/tolsrc.git
+[submodule "z_tools"]
+	path = z_tools
+	url = git@github.com:HariboteOS/z_tools_linux.git
